--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "fibers": "^5.0.0",
+    "sass": "^1.36.0",
+    "vue": "^2.5.11",
+    "vue-router": "^3.5.2",
+    "vuetify": "^2.5.7"
   },
   "browserslist": [
     "> 1%",
