--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "crypto": "^1.0.1",
     "fibers": "^5.0.0",
     "sass": "^1.36.0",
+    "save": "^2.4.0",
     "vue": "^2.5.11",
+    "vue-resource": "^1.5.3",
     "vue-router": "^3.5.2",
     "vuetify": "^2.5.7"
   },
