--- a/.babelrc
+++ b/.babelrc
@@ -4,3 +4,20 @@
     "stage-3"
   ]
 }
+
+/*
+{
+  "presets": [
+    ["latest", {
+      "es2015": {
+        "loose": true
+      }
+    }],
+    "react",
+    "stage-0"
+  ],
+  "plugins": [
+    "transform-runtime",
+    "transform-async-to-generator"
+  ]
+}*/
