--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^2.5.11",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.2",
-    "vuetify": "^2.5.7"
+    "vuetify": "^2.5.7",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
